test/functions/resolution/parenless-return-intent-overloaded-proc-this-imag.good
parenless-return-intent-overloaded-proc-this-imag.chpl:3: error: unresolved access of 'real(64)' by '()'
