test/functions/resolution/parenless-return-intent-overloaded-proc-this-imag.chpl
var c: complex = 1.2 + 3.4i;

writeln(c.re());
